# microsave

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
microsave_app/: main.py
microsave_app/api/: client.py
microsave_app/core/: config.py  mongo.py
microsave_app/helpers/: indexes.py  save.py
microsave_app/models/: payload_registery.py  payload_registry.py  save.py
microsave_app/models/payloads/: scavenger.py
microsave_app/services/: mongo.py
tests/: integration_tests.py  json_post.txt  test_save_service.py
