[project]
name = "microsave"
version = "0.1.0"
description = "Central Save State Microservice"
requires-python = ">=3.11"
dependencies = [
    "dnspython==2.8.0",
    "fastapi==0.136.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pymongo==4.17.0",
    "uvicorn>=0.47.0",
]

[project.scripts]
microsave = "microsave_app.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
